[package]
name = "planning-bot"
version = "0.1.0"
edition = "2021"
authors = ["Casper Meijn <casper@meijn.net>"]
description = "This Discord bot helps us with planning our D&D sessions"
repository = "https://github.com/caspermeijn/planning-bot"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.21.0"
shuttle-runtime = "0.21.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.21.0"
tokio = "1.26.0"
tracing = "0.1.37"
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-tz = "0.8.3"
reqwest = "0.11.18"
