[package]
name = "planning-bot"
version = "0.1.5"
edition = "2021"
authors = ["Casper Meijn <casper@meijn.net>"]
description = "This Discord bot helps us with planning our D&D sessions"
repository = "https://github.com/caspermeijn/planning-bot"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-tz = "0.10.1"
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
shuttle-runtime = "0.52"
shuttle-serenity = "0.52"
tokio = "1.44.2"
tracing = "0.1.37"
